\name{NEWS}
\title{brms News}
\encoding{UTF-8}

\section{CHANGES IN VERSION 1.3.1}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Introduce the auxiliary parameter \code{disc}
      ('discrimination') to be used in ordinal models.
      By default it is not estimated but fixed to one.
      \item Create \code{marginal_effects} plots of 
      two-way interactions of variables that were 
      not explicitely modeled as interacting.
    }
  }
  \subsection{OTHER CHANGES}{
    \itemize{
      \item Move \pkg{rstan} to 'Imports' and \pkg{Rcpp} 
      to 'Depends' in order to avoid loading \pkg{rstan} 
      into the global environment automatically.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Fix a bug leading to unexpected errors
      in some S3 methods when applied to ordinal models.
    }
  }
}

\section{CHANGES IN VERSION 1.3.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Fit error-in-variables models
      using function \code{me} in the model formulae.
      \item Fit multi-membership models using function
      \code{mm} in grouping terms.
      \item Add families \code{exgaussian}
      (exponentially modified Gaussian distribution) 
      and \code{wiener} (Wiener diffusion model distribution)
      specifically suited to handle for response times.
      \item Add the \code{lasso} prior as an alternative
      to the \code{horseshoe} prior for sparse models.
      \item Add the methods \code{log_posterior},
      \code{nuts_params}, \code{rhat}, and \code{neff_ratio}
      for \code{brmsfit} objects to conveniently access
      quantities used to diagnose sampling behavior.
      \item Combine chains in method \code{as.mcmc} using
      argument \code{combine_chains}.
      \item Estimate the auxiliary parameter
      \code{sigma} in models with known standard errors of
      the response by setting argument \code{sigma} to 
      \code{TRUE} in addition function \code{se}.